# shoutrrr-logger

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_HUB.md  Dockerfile  LICENSE  MONITORING.md  Makefile  PLUGINS.md  README.md  SECURITY.md  TRANSLATING.md  docker-compose.yml  docker-entrypoint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_api.py  test_db.py  test_fetch.py  test_parse2.py  test_regexp.py  test_sqlalchemy.py
backend/: alembic.ini  auth.py  config.py  database.py  fix_db.py  logging_config.json  main.py  models.py  pyproject.toml  schemas.py  test_api.py  test_db.py  test_get.py  version.py
backend/middleware/: performance.py
backend/migrations/: env.py
backend/plugins/: __init__.py  base.py  registry.py
backend/repositories/: alerts.py  api_metrics.py  audit_logs.py  cursor.py  notifications.py  plugin_configs.py  plugin_usage.py  routing_rules.py  settings.py  tokens.py  user_plugin_configs.py  users.py
backend/routers/: __init__.py  admin_monitoring_tokens.py  alerts.py  api_metrics.py  audit_logs.py  me.py  monitoring.py  notifications.py  plugins.py  routing_rules.py  settings.py  shoutrrr.py  tokens.py  user_plugins.py  users.py
backend/services/: alerts.py  api_metrics.py  audit_logs.py  email_digest.py  notifications.py  plugins.py  rate_limit.py  routing_rules.py  settings.py  sse.py  tokens.py  trigger_engine.py  users.py
backend/shoutrrr_logger_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  (+46 more)
(+152 files in other folders)
