[project]
name = "shoutrrr-logger-backend"
version = "1.0.0"
description = "Backend API for shoutrrr-logger"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.7.0",
    "markdown>=3.7.0",
    "nh3>=0.3.5",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
